SOC-2789 | fix: change confirm icon size on mobile

--- a/front/main/app/styles/component/_discussion-categories-edit.scss
+++ b/front/main/app/styles/component/_discussion-categories-edit.scss
@@ -232,8 +232,8 @@ $success-icon-size: 80px;
 	}
 
 	.icon-submit {
-		height: 40px;
-		width: 40px;
+		height: 35px;
+		width: 35px;
 	}
 }
 
